@@ -1,3 +1,5 @@
+* Remove support of zipped modules
+
 Version 2.0.0 - 2011-04-26
 * Bug fixes (see mercurial logs for details)
 * Use md5 hash for indexing translation
